# Randstad_CPP_Training

./: README.md
Automobil/: .gitignore  CMakeLists.txt  README.md
Automobil/lib/: Automobil.h  Coupe.h  SUV.h  Sedan.h  Utility.h
Automobil/src/: Automobil.cpp  Coupe.cpp  SUV.cpp  Sedan.cpp  Utility.cpp  main.cpp
